# railmind

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  render.yaml
.claude/: settings.json
.claude/skills/caveman/: SKILL.md
.claude/skills/context-engineering/: SKILL.md
.claude/skills/deprecation-migration/: SKILL.md
.claude/skills/design-an-interface/: SKILL.md
.github/workflows/: backend.yml  frontend.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py  settings.py
backend/app/agents/: adapter.py  base.py  crew_agent.py  orchestrator.py  passenger_info_agent.py  registry.py  station_agent.py  train_agent.py
backend/app/api/: passenger.py  routes.py  ws.py
backend/app/bus/: audit.py  bus.py
backend/app/contracts/: entities.py  events.py
backend/app/sim/: engine.py  loader.py  run.py
backend/tests/: test_agent_text.py  test_agents_cascade.py  test_api_audit.py  test_api_rest.py  test_api_ws.py  test_passenger_chat.py  test_passenger_fixtures.py  test_passenger_voice.py  test_sim_demo.py  test_sim_engine.py  test_sim_loader.py  test_sim_scenarios.py
data/: crews.json  stations.csv  timetable.json
docs/: AGENT_PLAN.md  CONTRACTS.md  DEMO_SCRIPT.md  DEPLOY.md  PITCH.md  Rail_Saarthi_Pitch.pptx  SPEC.md  executive-summary.md
frontend/: .env.example  .gitignore  index.html  package.json  pnpm-lock.yaml  vercel.json  vite.config.ts
frontend/api/: index.py  requirements.txt
frontend/src/: App.tsx  index.css  store.ts
scripts/: demo.py  make_ppt.py  mock_ws.py  seed.py  vercel_deploy.sh
(+39 files in other folders)
