[project]
name = "railmind-backend"
version = "0.1.0"
description = "RailMind — Agentic OS for Indian Railways (FAR AWAY 2026 hackathon MVP)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlmodel>=0.0.22",
    "httpx>=0.28",
    "python-multipart>=0.0.12",
    "anthropic>=0.40",
    "openai>=1.55",
    "groq>=0.13",
    "deepgram-sdk>=3.7",
    "hive-agent",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.uv.sources]
hive-agent = { git = "https://github.com/chiruu12/Hive" }
